<resources>
    <string name="app_name">FilmFluent</string>
    <string name="app_film">Film</string>
    <string name="app_fluent">Fluent</string>
    <string name="title_activity_loading">Loading</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="loading">Loading...</string>
    <string name="random_movie">Random Movie</string>
    <string name="random_movie_text">If you have no idea what to watch… Let us suggest a movie for you!</string>
    <string name="add_movie">Add Movie</string>
    <string name="add_movie_text">Add a movie you\'ve already watched</string>
    <string name="list_movies">List Movies</string>
    <string name="list_movies_text">Take a look at your movies</string>
    <string name="rating">Rating:&#160;</string>
    <string name="enter_movie_title">Enter movie title</string>
    <string name="save_movie">Save Movie</string>
    <string name="rating_2_5">Rating: 2.5 / 5</string>
    <string name="please_enter_movie_title">Please enter a movie title.</string>
    <string name="movie_added_successfully">Movie added successfully!</string>
    <string name="error_adding_movie">Error adding movie. Please try again.</string>
    <string name="movies_list">Movies List</string>
    <string name="delete_movie">Delete Movie</string>
    <string name="confirm_delete_movie">Are you sure you want to delete %1$s?</string>
    <string name="movie_deleted">%1$s has been deleted.</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="no_movies_found">No movies found. Please add some movies!</string>
    <string name="sort_asc">Sort by Rating (Ascending)</string>
    <string name="sort_desc">Sort by Rating (Descending)</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="ClickMe">Click Me!</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_message_error">Something went wrong. Please try again later.</string>
    <string name="dialog_button_ok">Ok</string>
    <string name="search_movie">Search</string>
    <string name="movie_title">Movie Title</string>
    <string name="confirm">Confirm Rating</string>
    <string name="save_confirmation">"Do you want to save the movie "</string>
    <string name="with_rating">with the rating</string>
    <string name="select_valid_movie">Please select a movie from the list</string>
</resources>