<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="409dp"
        android:layout_height="82dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="1dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/blue_fluent"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/random_movie_button"
        android:layout_width="210dp"
        android:layout_height="80dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/blue_fluent"
        android:drawableLeft="@drawable/ic_random_movie"
        android:gravity="center"
        android:text="@string/random_movie"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_title" />

    <TextView
        android:id="@+id/random_movie_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="55dp"
        android:gravity="center"
        android:text="@string/random_movie_text"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_movie_button" />

    <Button
        android:id="@+id/add_movie_button"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/blue_fluent"
        android:drawableLeft="@drawable/ic_add_movie"
        android:text="@string/add_movie"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random_movie_button" />

    <TextView
        android:id="@+id/add_movie_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:gravity="center"
        android:text="@string/add_movie_text"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_movie_button" />

    <Button
        android:id="@+id/list_movies_button"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="60dp"
        android:backgroundTint="@color/blue_fluent"
        android:drawableLeft="@drawable/ic_list_movies"
        android:text="@string/list_movies"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_movie_button" />

    <TextView
        android:id="@+id/list_movies_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="55dp"
        android:gravity="center"
        android:text="@string/list_movies_text"
        android:textColor="@color/gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_movies_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-23dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="709dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="284dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_movies_text"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@mipmap/ic_launcher" />


</androidx.constraintlayout.widget.ConstraintLayout>
