<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Loading">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/film_background" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="181dp"
        android:layout_marginEnd="181dp"
        android:layout_marginBottom="180dp" />

    <TextView
        android:id="@+id/textViewLoading"
        android:layout_width="91dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="160dp"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="130dp"
        android:text="@string/loading"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:backgroundTint="@color/black"
        />

    <TextView
        android:layout_width="93dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="199dp"
        android:layout_marginBottom="302dp"
        android:gravity="center"
        android:text="@string/app_film"
        android:textSize="28sp"
        android:textColor="@color/green_film"
        android:textStyle="bold" />

    <TextView
        android:layout_width="101dp"
        android:layout_height="38dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="183dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="301dp"
        android:gravity="center"
        android:text="@string/app_fluent"
        android:textSize="28sp"
        android:textColor="@color/blue_fluent"
        android:textStyle="bold" />

</RelativeLayout>